--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
 	<img id="i1" name="Mango" height="75" src="mango.jpg">
 	<img id="i2" name="Apple" height="75" src="apple.png">
 	<img id="i3" name="Grapes" height="75" src="grapes.jpg">
-	<script src="script.js">
-		
-	</script>
 	<script>
   window.fbAsyncInit = function() {
     FB.init({
@@ -40,5 +37,6 @@
   };
 </script>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
