--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       version          : 'v10.0'
     });
   };
+  console.log("hi");
 </script>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
 <script src="script.js"></script>
