--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       xfbml            : true,
       version          : 'v10.0'
     });
+    FB.AppEvents.logPageView();
   };
   console.log("hi");
 </script>
